--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#20c063" />
     <meta
+      name="color-scheme"
+      content="light only"
+      <meta
       name="description"
       content="Web site created using create-react-app"
     />
