--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#20c063" />
+    <meta name="color-scheme" content="light only" />
     <meta
-      name="color-scheme"
-      content="light only"
-      <meta
       name="description"
       content="Web site created using create-react-app"
     />
